--- a/app/src/main/res/layout/activity_frame_10.xml
+++ b/app/src/main/res/layout/activity_frame_10.xml
@@ -95,7 +95,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="@string/mostrar_puntaje_practica"
+            android:text="SU PUNTAJE: "
             android:textColor="@color/black"
             android:textSize="30sp"
             android:layout_marginTop="70dp"
@@ -105,27 +105,20 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.285"
-            />
+            >
+
+        </TextView>
+
 
         <TextView
-            android:id="@+id/txtCurso_Prueba"
+            android:id="@+id/txtNota"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
-            android:layout_marginBottom="100dp"
-            android:text="@string/cantidad_errores_practica"
-            android:textAlignment="center"
+            android:layout_marginTop="70dp"
+            android:gravity="center"
+            android:text="6"
             android:textColor="@color/black"
-            android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2"
-            app:layout_constraintVertical_bias="0.046"
-            />
-
-
+            android:textSize="30sp" />
 
         <Button
             android:id="@+id/btn_salir"
