--- a/app/src/main/res/layout/activity_frame_5.xml
+++ b/app/src/main/res/layout/activity_frame_5.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F4FEBA"
+    android:background="@color/white"
     tools:context=".frame_5">
 
 
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_weight="1"
-        android:background="#004242"
+        android:background="@color/Azul_marino"
 
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -23,50 +23,20 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0">
 
-        <LinearLayout
+        <ImageView
+            android:id="@+id/imageView3"
             android:layout_width="50dp"
-            android:layout_height="match_parent"
-            android:background="#222222"
-            android:orientation="vertical">
-
-            <View
-                android:layout_width="30dp"
-                android:layout_height="4dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="15dp"
-                android:background="#7A7A7A"
-
-                />
-
-            <View
-                android:layout_width="30dp"
-                android:layout_height="4dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
-                android:background="#7A7A7A"
-
-                />
-
-            <View
-                android:layout_width="30dp"
-                android:layout_height="4dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
-                android:background="#7A7A7A"
-
-                />
-
-
-        </LinearLayout>
-
-
+            android:layout_height="33dp"
+            android:layout_marginLeft="340dp"
+            android:layout_marginTop="12dp"
+            android:src="@drawable/logo_blanco" />
     </LinearLayout>
 
     <Button
         android:id="@+id/cpatrasBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="#004242"
+        android:backgroundTint="@color/Azul_marino"
         android:paddingHorizontal="40dp"
         android:paddingVertical="10dp"
 
@@ -85,7 +55,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
-        android:backgroundTint="#004242"
+        android:backgroundTint="@color/Azul_marino"
         android:paddingHorizontal="30dp"
         android:paddingVertical="10dp"
 
@@ -116,7 +86,7 @@
         android:paddingHorizontal="20dp"
         android:text="@string/Pregunta_practica1"
         android:textColor="@color/black"
-        android:textSize="20sp"
+        android:textSize="25sp"
 
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
