--- a/app/src/main/res/layout/activity_pregunta_simulacro.xml
+++ b/app/src/main/res/layout/activity_pregunta_simulacro.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F4FEBA"
+    android:background="@color/white"
     tools:context=".PreguntaSimulacro">
 
 
@@ -13,8 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_weight="1"
-        android:background="#004242"
-
+        android:background="@color/Azul_marino"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,43 +21,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0">
-
-        <LinearLayout
+        <ImageView
+            android:id="@+id/imageView3"
             android:layout_width="50dp"
-            android:layout_height="match_parent"
-            android:background="#222222"
-            android:orientation="vertical">
-
-            <View
-                android:layout_width="30dp"
-                android:layout_height="4dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="15dp"
-                android:background="#7A7A7A"
-
-                />
-
-            <View
-                android:layout_width="30dp"
-                android:layout_height="4dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
-                android:background="#7A7A7A"
-
-                />
-
-            <View
-                android:layout_width="30dp"
-                android:layout_height="4dp"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
-                android:background="#7A7A7A"
-
-                />
-
-
-        </LinearLayout>
-
+            android:layout_height="33dp"
+            android:layout_marginLeft="340dp"
+            android:layout_marginTop="12dp"
+            android:src="@drawable/logo_blanco" />
 
     </LinearLayout>
 
@@ -67,7 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
-        android:backgroundTint="#004242"
+        android:backgroundTint="@color/Azul_marino"
         android:paddingHorizontal="30dp"
         android:paddingVertical="10dp"
 
@@ -80,7 +49,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/radioGroup"
         app:layout_constraintVertical_bias="0.0" />
-
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
@@ -88,8 +56,6 @@
         android:text="@string/simulacro_tiempo"
         android:textColor="@color/black"
         android:textSize="17sp"
-
-
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.616"
@@ -104,8 +70,6 @@
         android:text="@string/hora"
         android:textColor="@color/black"
         android:textSize="17sp"
-
-
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.846"
