--- a/app/src/main/res/layout/card_layout.xml
+++ b/app/src/main/res/layout/card_layout.xml
@@ -9,8 +9,8 @@
     app:cardCornerRadius="20dp"
     app:cardElevation="40dp"
     tools:layout_editor_absoluteX="180dp"
-    tools:layout_editor_absoluteY="108dp">
-
+    tools:layout_editor_absoluteY="108dp"
+    android:src="@drawable/images">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="70dp"
@@ -20,11 +20,10 @@
             android:id="@+id/txtCurso"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
             android:text="curso"
-
-            android:textColor="@color/black"
-            android:textSize="25dp"
+            android:textStyle="bold"
+            android:textColor="@color/Azul_marino"
+            android:textSize="25sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
