--- a/app/src/main/res/layout/activity_examen_simulacion.xml
+++ b/app/src/main/res/layout/activity_examen_simulacion.xml
@@ -11,22 +11,25 @@
         android:id="@+id/tvNombreUniversidad"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:textSize="29dp"
         android:text="UNIVERSIDADES"
-
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textStyle="bold"
+        android:textColor="@color/Azul_marino"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.043" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvUniversidades"
         android:layout_width="match_parent"
         android:layout_height="522dp"
+        android:layout_marginTop="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvNombreUniversidad"
-        tools:listitem="@layout/card_layout_exam"/>
+        app:layout_constraintVertical_bias="0.0"
+        tools:listitem="@layout/card_layout_exam" />
 </androidx.constraintlayout.widget.ConstraintLayout>
