--- a/app/src/main/res/layout/activity_prueba_simulacion.xml
+++ b/app/src/main/res/layout/activity_prueba_simulacion.xml
@@ -4,31 +4,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Prueba_Simulacion"
-    >
+    tools:context=".Prueba_Simulacion">
 
     <TextView
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="SIMULACRO"
+        android:layout_marginTop="20dp"
         android:hint=""
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="SIMULACRO"
+        android:textColor="@color/Azul_marino"
+        android:textSize="28dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.081" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvCursos"
         android:layout_width="match_parent"
         android:layout_height="597dp"
+        android:layout_marginTop="30dp"
         android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        tools:listitem="@layout/card_layout"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/textView10"
+        app:layout_constraintVertical_bias="0.0"
+        tools:listitem="@layout/card_layout" />
 </androidx.constraintlayout.widget.ConstraintLayout>
