--- a/app/src/main/res/layout/activity_resultados_simulacion.xml
+++ b/app/src/main/res/layout/activity_resultados_simulacion.xml
@@ -22,45 +22,53 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0">
 
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="50dp"
+            android:layout_height="33dp"
+            android:layout_marginLeft="340dp"
+            android:layout_marginTop="12dp"
+            android:src="@drawable/logo_blanco" />
     </LinearLayout>
 
     <Button
         android:id="@+id/btnVolverIntentarExamen"
         android:layout_width="match_parent"
-        android:layout_marginHorizontal="20dp"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="30dp"
+        android:background="@drawable/border_radious"
         android:backgroundTint="@color/Azul_marino"
         android:paddingHorizontal="60dp"
         android:paddingVertical="15dp"
         android:text="@string/btn_volver_intentar"
         android:textColor="@color/white"
         android:textSize="25sp"
-        android:background="@drawable/border_radious"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnsalirExamen"
-        app:layout_constraintVertical_bias="0.116" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/btnsalirExamen"
         android:layout_width="match_parent"
-        android:layout_marginHorizontal="20dp"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="50dp"
+        android:background="@drawable/border_radious"
         android:backgroundTint="@color/Azul_marino"
         android:paddingHorizontal="60dp"
         android:paddingVertical="15dp"
         android:text="@string/btn_salir"
         android:textColor="@color/white"
         android:textSize="25sp"
-        android:background="@drawable/border_radious"
-
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.4"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.41" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView"
@@ -85,8 +93,7 @@
         android:gravity="center"
         android:text="@string/mostrar_puntaje_simulacion"
         android:textColor="@color/black"
-        android:textSize="30sp"
-
+        android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
