--- a/app/src/main/res/layout/card_layout_exam.xml
+++ b/app/src/main/res/layout/card_layout_exam.xml
@@ -5,9 +5,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardCornerRadius="40dp"
+    app:cardCornerRadius="20dp"
     app:cardElevation="40dp"
-    android:layout_margin="10dp"
+    android:layout_margin="15dp"
     tools:layout_editor_absoluteX="180dp"
     tools:layout_editor_absoluteY="108dp"
     android:background="@color/white"
@@ -15,16 +15,17 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="100dp"
         android:layout_margin="10dp">
 
         <ImageView
             android:id="@+id/imgUniversidad"
-            android:layout_width="165dp"
+            android:layout_width="130dp"
             android:layout_height="match_parent"
+            android:layout_marginVertical="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.214"
+            app:layout_constraintHorizontal_bias="0.125"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -33,15 +34,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="asdasd"
-            android:textSize="28sp"
-
+            android:textColor="@color/Azul_marino"
+            android:textSize="16dp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.659"
-
+            app:layout_constraintHorizontal_bias="0.446"
             app:layout_constraintStart_toEndOf="@+id/imgUniversidad"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.504" />
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
